tests/invalid/SetConversion_Invalid_1.whiley
function f({real} ls) -> int:
    return |ls|

method main():
    f({1, 2, 3, {}})
